# norma-robot

./: .gitignore  Cargo.toml  README.md
claude-supervisor/: .mcp.json  CLAUDE.md  PLAN.md  README.md  SUPERVISOR.md  drop_path.json  fix_camera_perms.sh  grasp_model.py  grasp_offsets.md  grid_grasp.json  pick_recipe.json  robot_lib.py  run_hero_demo.sh  slow_servos.py  smooth_pick.py  station.yaml  station_mcp.py  station_probe.py  teach_drop.py  teach_points.py
software/drivers/st3215/src/: port.rs
software/station/clients/station-app/: electron-builder.yml  package-lock.json  package.json
software/station/clients/station-viewer/: AGENTS.md  package.json  vite.config.ts
software/station/clients/station-viewer/src/: App.tsx  index.css  main.tsx
software/station/clients/station-viewer/src/components/: AsciiRobot.tsx  FullscreenImageViewer.tsx  GotoFrameInput.tsx  HistoryTimelineTrack.tsx  MainLayout.tsx  Navigation.tsx  TickLabel.tsx  Timeline.tsx  TimelineControls.tsx
software/station/clients/station-viewer/src/hooks/: index.ts  useTheme.tsx
software/station/clients/station-viewer/src/pages/: HistoryPage.tsx  HomePage.tsx  St3215BusCalibrationPage.tsx  St3215MotorConfigPage.tsx
software/station/clients/station-viewer/src/st3215/: BaseRobotRenderer.tsx  BusCard.tsx  BusStatusCanvas.tsx  BusViewer.tsx  BusWebGLRenderer.tsx  MotorDataTable.tsx  NormvlaRobotRenderer.tsx  motor-parser.ts
software/station/clients/station-viewer/src/usbvideo/: CameraViewer.tsx  RobotCameraView.tsx  UsbVideoTimelineTrack.tsx  (+1 more)
software/station/examples/: ROBOT_README.md
(+10 files in other folders)
