[workspace]
resolver = "3"
members = [
  "software/drivers/inferences",
  "software/drivers/motors-mirroring",
  "software/drivers/st3215",
  "software/drivers/sysinfod",
  "software/drivers/usbvideo",
  "software/station/bin/station",
  "software/station/shared/station-iface",
  "software/station/shared/systime-rs",
]

[workspace.package]
version = "0.1.0-beta.8"

[workspace.dependencies]
normfs = "0.1.0-beta.1"
tokio = { version = "1.49", features = ["full"] }
prost = "0.12"
prost-build = "0.12"
bytes = "1.11"
log = "0.4.28"
parking_lot = "0.12"
lazy_static = "1.5"

